13-kubernetes-config-01-objects/manifests/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: prod
spec:
  rules:
  - host: netology-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 80
      - path: /api/news
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 9000
